route.yaml
# route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
  namespace: nginx-app
spec:
  to:
    kind: Service
    name: nginx
  port:
    targetPort: 80
  tls:
    termination: edge
